--- a/src/input.css
+++ b/src/input.css
@@ -73,7 +73,7 @@
     }
 
     .lg-macbook {
-        height: 100svh;
+        height: 650px;
         background-image: url("../assets/img/Heroes/Macbook-Air/hero_macbook_air_m3__cp4t7pn8zqaa_large_2x.jpg");
     }
 
